[tool.poetry]
name = "studypython"
version = "0.1.0"
description = ""
authors = ["xingnn"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.1"
# 本地dist
#autofish = { path = "/Users/conanmu/code/github/python/autofish/dist/autofish-0.1.0.tar.gz" }
autofish = { path = "/Users/conanmu/code/github/python/autofish/dist/autofish-0.1.0.tar.gz" }

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
